Bug 535820 - JDK 11 CORBA Support
Signed-off-by: Tomas Kraus <tomas.kraus@oracle.com>

Resolved problem with sun.misc dependencies. GF CORBA updated to 4.2.0.b003.

Signed-off-by: Tomas Kraus <tomas.kraus@oracle.com>

Build cleanup.

Signed-off-by: Tomas Kraus <tomas.kraus@oracle.com>

Additional build cleanup.

Signed-off-by: Tomas Kraus <tomas.kraus@oracle.com>

Removed JDK9 condition, updated build for remote P2 site.

Signed-off-by: Tomas Kraus <tomas.kraus@oracle.com>

GMBAL API updated to 3.2.0.b003

complete the CORBA separation

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

preparation for jdk11 uptake

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

temp

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

add corba jar to the distribution zip

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

remove unused property

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

adopt recent changes

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

need api in the file name

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

switch to jdk11, wildfly 15.0.1; fix corba tests

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

increase timeouts

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

tmp - debug corba failures

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

set different port for corba server

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

clean up corba tests, update dbws builder tests for jdk11

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

update dbws tests for jdk11

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

fix dbwsbuilder tests for jdk11

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

fix sdo tests for jdk11

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

fix javadoc and test-osgi on jdk11

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>