@@ -38,17 +38,18 @@ public class OSGITestHelper {
     private static final String PLUGINS_DIR = System.getProperty("moxytest.2.common.plugins.dir");
     private static final String QUALIFIER = System.getProperty("build.qualifier", "qualifier");
     private static final String RELEASE_VERSION = System.getProperty("release.version", "2.7.0");
+    private static final String ACTIVATION_JAR = System.getProperty("activation.jar", "jakarta.activation.jar");
     private static final String JAXB_API_JAR = System.getProperty("jaxb-api.jar", "jakarta.xml.bind-api.jar");
-    private static final String JAXRS_JAR = System.getProperty("jaxrs.jar", "javax.ws.rs_1.1.1.v20101004-1200.jar");
+    private static final String JAXRS_JAR = System.getProperty("jaxrs.jar", "jakarta.ws.rs-api.jar");
     private static final String ASM_JAR = System.getProperty("asm.jar", "org.eclipse.persistence.asm_7.0.0.v201811131354.jar");
     private static final String ASM_VERSION = System.getProperty("asm.version", "7.0.0.v201811131354");
     private static final String BEAN_VALIDATION_LIB = System.getProperty("javax.validation.lib", "jakarta.validation-api.jar");
 
     public static Option[] getDefaultOptions() {
         return options(
-                when(JavaSEPlatform.CURRENT.getMajor() >= 9).useOptions(vmOptions("--add-modules", "java.sql,java.xml.bind")),
                 systemProperty("asm.version").value(ASM_VERSION),
                 // JAXB API
+                bundle("file:" + PLUGINS_DIR + ACTIVATION_JAR),
                 bundle("file:" + PLUGINS_DIR + JAXB_API_JAR),
 
                 // JAX-RS API
@@ -65,13 +66,13 @@ public class OSGITestHelper {
 
     public static Option[] getOptionsWithBeanValidation() {
         return options(
-                when(JavaSEPlatform.CURRENT.getMajor() >= 9).useOptions(vmOptions("--add-modules", "java.sql,java.xml.bind")),
                 mavenBundle().groupId("org.hibernate.validator").artifactId("hibernate-validator").version("6.0.7.Final"),
                 mavenBundle().groupId("com.fasterxml").artifactId("classmate").version("1.3.1"),
                 mavenBundle().groupId("org.glassfish").artifactId("javax.el").version("3.0.1-b08"),
                 mavenBundle().groupId("org.jboss.logging").artifactId("jboss-logging").version("3.3.0.Final"),
 
                 // JAXB API
+                bundle("file:" + PLUGINS_DIR + ACTIVATION_JAR),
                 bundle("file:" + PLUGINS_DIR + JAXB_API_JAR),
 
                 // JAX-RS API
